# discord-zstd-java

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yml  test.yml  zstd.yml
api/: build.gradle.kts
api-ffi/: build.gradle.kts
api-jna/: build.gradle.kts
benchmarks/: build.gradle.kts
benchmarks/results-converter/: build.gradle.kts
benchmarks/src/jmh/java/: ResultConverter.java
benchmarks/src/test/java/: ZlibTest.java
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: GitUtils.kt  TestDataGeneratorTask.kt  Version.kt  java-conventions.gradle.kts  publish-conventions.gradle.kts  publishing.kt  tasks.kt
ffm-impl/: build.gradle.kts
gateway-chunks-zlib/shard-0/: chunk-0.bin.zlib  chunk-1.bin.zlib  chunk-2.bin.zlib  chunk-3.bin.zlib
gradle/: libs.versions.toml
jda-integration/: BENCHMARKS.md  README.md  build.gradle.kts
jna-impl/: README.md  build.gradle.kts
jni-impl/: .gitignore  build.gradle.kts  compile-natives.sh
jni-impl/natives/: CMakeLists.txt
jni-impl/natives/include/: chunks.h  chunks.hpp  context.hpp  decompressor.hpp  library.h  library.hpp  streaming.hpp
jni-impl/natives/src/: chunks.cpp  context.cpp  decompressor.cpp  library.cpp  streaming.cpp
live-metrics-processor/: build.gradle.kts
live-metrics-processor/src/main/kotlin/: DecompressionEntry.kt  DecompressionMetrics.kt  Main.kt
natives/: .gitignore  build.gradle.kts  compile-natives.sh
test-data/: build.gradle.kts
test-data-generator/: build.gradle.kts
(+99 files in other folders)
